--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/3. Exception的恢复.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/3. Exception的恢复.md
@@ -3,14 +3,17 @@
 
 <!-- code_chunk_output -->
 
-* [1 Fault类型的异常](#1-fault类型的异常)
-* [2 Trap类型的异常](#2-trap类型的异常)
-* [3 Abort类型的异常](#3-abort类型的异常)
-	* [3.1 \#DF(Double Fault)异常](#31-dfdouble-fault异常)
+- [异常的类型](#异常的类型)
+- [Fault类型的异常](#fault类型的异常)
+- [Trap类型的异常](#trap类型的异常)
+- [Abort类型的异常](#abort类型的异常)
+  - [#DF(Double Fault)异常](#dfdouble-fault异常)
 
 <!-- /code_chunk_output -->
 
-当异常发生, 处理器将进入异常处理程序, 执行完毕后处理器将回到被中断的代码流程里继续执行. 而回到代码的哪个位置执行, 以及哪些异常的产生处理器是不能恢复的, 这些都决定于异常的类型.
+# 异常的类型
+
+当异常发生, 处理器将**进入异常处理程序**, 执行完毕后处理器**将回到被中断的代码流程里继续执行**. 而回到代码的**哪个位置执行**, 以及**哪些异常的产生处理器是不能恢复的**, 这些都**决定于异常的类型**.
 
 在**x86/x64体系中**, 有**三类异常**, 如下.
 
@@ -20,7 +23,7 @@
 
 ③ **Abort类型**
 
-# 1 Fault类型的异常
+# Fault类型的异常
 
 当产生fault类型的异常时, 处理器允许(且必须)进入异常处理程序对这个错误进行修正后重新回到产生异常的指令继续执行. 因此, fault类型的异常将:
 
@@ -32,7 +35,7 @@
 
 对于**Fault类型**的一些异常, 典型地, **OS**的处理是**强行终止进程的运行**或者说**杀死产生Fault类异常的进程**, 以这种方式来跳出异常处理！(从逻辑上来说是忽略异常)
 
-# 2 Trap类型的异常
+# Trap类型的异常
 
 当产生**trap类型的异常**时, 处理器允许忽略异常继续往下执行. 在异常处理程序里不必修正错误, 回到发生异常指令的下一条指令继续执行. 因此, trap类型的异常将:
 
@@ -42,29 +45,29 @@
 
 事实上, 属于trap类型的**异常很少(！！！**), 如下:
 
-① \#**BP(Breakpoint)异常**
+① `#BP`(Breakpoint)异常
 
-② \#**OF(Overflow)异常**
+② `#OF`(Overflow)异常
 
-③ **属于trap类型**的\#**DB(Debug)异常**: 在\#**DB异常中**有**部分是Trap类型**, 有部分是**Fault类型**, 详情见**13章内容**.
+③ **属于trap类型**的`#DB`(Debug)异常: 在\#**DB异常中**有**部分是Trap类型**, 有部分是**Fault类型**, 详情见**13章内容**.
 
 trap类型的异常并不影响到后续的指令流的执行. 因此, trap类型的异常错误并不重要, 甚至不能说是错误.
 
 Intel特别提出了一个事例: 如果一个trap类型的异常发生在**jmp指令后**, 那么处理器从异常处理程序返回后, 将来到**jmp指令的目标地址**去执行, 而**不是jmp指令的下一条指令(！！！**).
 
-# 3 Abort类型的异常
+# Abort类型的异常
 
-当abort类型的异常产生时, 意味着处理器遇到一个非常严重的错误. abort类型的异常将使处理器无法回到正常的指令流里继续执行.
+当abort类型的异常产生时, 意味着处理器遇到一个**非常严重的错误**. abort类型的异常将使处理器无法回到正常的指令流里继续执行.
 
 有**两类异常**属于**Abort类型**
 
-① \#**DF(Double Fault)异常**
+① `#DF`(Double Fault)异常
 
-② \#**MC(Machine Check)异常**
+② `#MC`(Machine Check)异常
 
 当abort异常发生, 在异常处理程序中唯一能做的: **如果可以**就**报告当前处理器状态**, 然后对机器进行shutdown或reset之类的处理
 
-## 3.1 \#DF(Double Fault)异常
+## #DF(Double Fault)异常
 
 当一个**fault类型的异常**发生, 处理器**正在调用这个异常的处理程序**, 可是并**没有成功进入这个异常的处理程序执行**. 在这个**调用过程中**, **处理器**又检测到**另一个fault异常(！！！**)的产生. 于是**处理器无法继续执行这个双重的fault异常(！！！**), 从而**产生另一个异常\#DF(Double Fault**)
 
