--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
@@ -48,7 +48,7 @@
 
 ② **INTO指令**: 软件执行**INTO指令**, 处理器检测到eflags寄存器的OF标志位置位时, 将产生\#OF(Overflow)**溢出异常！！！** 对应的向量号为4, 属于trap类型, **64位模式下该指令无效**.
 
-③ **BOUND指令**: 软件执行BOUND指令, 处理器检测到**操作数越界**时将产生\#**BR(Bound Range)异常！！！**. **64位模式下指令无效**.
+③ **BOUND指令**: 软件执行BOUND指令, 处理器检测到**操作数越界**时将产生`#BR`(Bound Range)异常. **64位模式下指令无效**.
 
 # 3. Machine Check(机器检查)异常
 
