--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -74,7 +74,9 @@ set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-API
 
 link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；
 
-## 中断注入在KVM内部流程起始于一个函数kvm_set_irq
+## 中断注入
+
+中断注入在KVM内部流程起始于一个函数`kvm_set_irq`
 
 ```cpp
 /*
