--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -785,3 +785,12 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 用户空间qemu通过`KVM_CREATE_DEVICE` API接口进入KVM的`kvm_vm_ioctl`处理函数，继而进入`kvm_arch_vm_ioctl`，根据参数中的`KVM_CREATE_IRQCHIP`标志进入**初始化中断控制器**的流程，首先肯定是**注册pic**和**io APIC**，这里我们就不详细阐述，重点在于后面对中断路由表的初始化过程。**中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
+````cpp
+int kvm_setup_default_irq_routing(struct kvm *kvm)
+{
+    return kvm_set_irq_routing(kvm, default_routing,
+                   ARRAY_SIZE(default_routing), 0);
+}
+```
+
+首个参数kvm指定特定的虚拟机，后面default_routing是一个全局的kvm_irq_routing_entry数组，就定义在irq_comm.c中，该数组没别的作用，就是初始化kvm_irq_routing_table，看下kvm_set_irq_routing
