--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -785,7 +785,7 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 用户空间qemu通过`KVM_CREATE_DEVICE` API接口进入KVM的`kvm_vm_ioctl`处理函数，继而进入`kvm_arch_vm_ioctl`，根据参数中的`KVM_CREATE_IRQCHIP`标志进入**初始化中断控制器**的流程，首先肯定是**注册pic**和**io APIC**，这里我们就不详细阐述，重点在于后面对中断路由表的初始化过程。**中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
-````cpp
+```cpp
 int kvm_setup_default_irq_routing(struct kvm *kvm)
 {
     return kvm_set_irq_routing(kvm, default_routing,
@@ -793,4 +793,88 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 }
 ```
 
-首个参数kvm指定特定的虚拟机，后面default_routing是一个全局的kvm_irq_routing_entry数组，就定义在irq_comm.c中，该数组没别的作用，就是初始化kvm_irq_routing_table，看下kvm_set_irq_routing
+首个参数kvm指定特定的虚拟机，后面`default_routing`是一个全局的`kvm_irq_routing_entry`数组，就定义在irq_comm.c中，该数组没别的作用，就是初始化`kvm_irq_routing_table`，看下`kvm_set_irq_routing`
+
+```cpp
+int kvm_set_irq_routing(struct kvm *kvm,
+                        const struct kvm_irq_routing_entry *ue,
+                        unsigned nr,
+                        unsigned flags)
+{
+        struct kvm_irq_routing_table *new, *old;
+        struct kvm_kernel_irq_routing_entry *e;
+        u32 i, j, nr_rt_entries = 0;
+        int r;
+        /*正常情况下，nr_rt_entries=nr*/
+        for (i = 0; i < nr; ++i) {
+                if (ue[i].gsi >= KVM_MAX_IRQ_ROUTES)
+                        return -EINVAL;
+                nr_rt_entries = max(nr_rt_entries, ue[i].gsi);
+        }
+
+        nr_rt_entries += 1;
+        /*为中断路由表申请空间*/
+        new = kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT);
+        if (!new)
+                return -ENOMEM;
+        /*设置指针*/
+        new->nr_rt_entries = nr_rt_entries;
+        for (i = 0; i < KVM_NR_IRQCHIPS; i++)
+                for (j = 0; j < KVM_IRQCHIP_NUM_PINS; j++)
+                        new->chip[i][j] = -1;
+        /*初始化每一项kvm_kernel_irq_routing_entry*/
+        for (i = 0; i < nr; ++i) {
+                r = -ENOMEM;
+                e = kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT);
+                if (!e)
+                        goto out;
+
+                r = -EINVAL;
+                switch (ue->type) {
+                case KVM_IRQ_ROUTING_MSI:
+                        if (ue->flags & ~KVM_MSI_VALID_DEVID)
+                                goto free_entry;
+                        break;
+                default:
+                        if (ue->flags)
+                                goto free_entry;
+                        break;
+                }
+                r = setup_routing_entry(kvm, new, e, ue);
+                if (r)
+                        goto free_entry;
+                ++ue;
+        }
+
+        mutex_lock(&kvm->irq_lock);
+        old = rcu_dereference_protected(kvm->irq_routing, 1);
+        rcu_assign_pointer(kvm->irq_routing, new);
+        kvm_irq_routing_update(kvm);
+        kvm_arch_irq_routing_update(kvm);
+        mutex_unlock(&kvm->irq_lock);
+
+        kvm_arch_post_irq_routing_update(kvm);
+
+        synchronize_srcu_expedited(&kvm->irq_srcu);
+        /*释放old*/
+        new = old;
+        r = 0;
+        goto out;
+
+free_entry:
+        kfree(e);
+out:
+        free_irq_routing_table(new);
+
+        return r;
+}
+```
+
+可以参考一个宏：
+
+```cpp
+#define IOAPIC_ROUTING_ENTRY(irq) \
+        { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
+          .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
+```
+
