--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -878,3 +878,5 @@ out:
           .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
 ```
 
+这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`,可见**gsi**就是**irq号**，所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：`kvm_irq_routing_table`**结构**、`nr_rt_entries`个`hlist_head`和**nr个**`kvm_kernel_irq_routing_entry`，所以kvm_irq_routing_table的大小是和全局数组的大小一样的。整个结构如下图所示
+
