--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -885,5 +885,38 @@ out:
 根据上图就可以理解`new->rt_entries = (void *)&new->map[nr_rt_entries];`这行代码的含义，接下来是对没项的table的chip数组做初始化，这里初始化为-1. 接下来就是一个循环，对每一个`kvm_kernel_irq_routing_entry`做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
 
 ```cpp
+static int setup_routing_entry(struct kvm *kvm,
+                               struct kvm_irq_routing_table *rt,
+                               struct kvm_kernel_irq_routing_entry *e,
+                               const struct kvm_irq_routing_entry *ue)
+{
+        struct kvm_kernel_irq_routing_entry *ei;
+        int r;
+        u32 gsi = array_index_nospec(ue->gsi, KVM_MAX_IRQ_ROUTES);
 
+        /*
+         * Do not allow GSI to be mapped to the same irqchip more than once.
+         * Allow only one to one mapping between GSI and non-irqchip routing.
+         */
+        hlist_for_each_entry(ei, &rt->map[gsi], link)
+                if (ei->type != KVM_IRQ_ROUTING_IRQCHIP ||
+                    ue->type != KVM_IRQ_ROUTING_IRQCHIP ||
+                    ue->u.irqchip.irqchip == ei->irqchip.irqchip)
+                        return -EINVAL;
+
+        e->gsi = gsi;
+        e->type = ue->type;
+        r = kvm_set_routing_entry(kvm, e, ue);
+        if (r)
+                return r;
+        if (e->type == KVM_IRQ_ROUTING_IRQCHIP)
+                rt->chip[e->irqchip.irqchip][e->irqchip.pin] = e->gsi;
+
+        hlist_add_head(&e->link, &rt->map[e->gsi]);
+
+        return 0;
+}
 ```
+
+之前的初始化过程我们已经看见了，.type为KVM_IRQ_ROUTING_IRQCHIP，所以这里实际上就是把e->gsi = ue->gsi;e->type = ue->type;然后调用了kvm_set_routing_entry，该函数中主要是设置了kvm_kernel_irq_routing_entry中的set函数，APIC的话设置的是kvm_set_ioapic_irq函数，而pic的话设置kvm_set_pic_irq函数，然后设置irqchip的类型和管脚，对于IOAPIC也是直接复制过来，ＰＩＣ由于管脚计算是irq%8，所以这里需要加上8的偏移。之后设置table的chip为gis号。回到setup_routing_entry函数中，就把kvm_kernel_irq_routing_entry以gsi号位索引，加入到了map数组中对应的双链表中。再回到kvm_set_irq_routing函数中，接下来就是更新kvm结构中的irq_routing指针了。
+
