--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -918,5 +918,5 @@ static int setup_routing_entry(struct kvm *kvm,
 }
 ```
 
-之前的初始化过程我们已经看见了，`.type`为`KVM_IRQ_ROUTING_IRQCHIP`，所以这里实际上就是把e->gsi = ue->gsi;e->type = ue->type;然后调用了kvm_set_routing_entry，该函数中主要是设置了kvm_kernel_irq_routing_entry中的set函数，APIC的话设置的是kvm_set_ioapic_irq函数，而pic的话设置kvm_set_pic_irq函数，然后设置irqchip的类型和管脚，对于IOAPIC也是直接复制过来，ＰＩＣ由于管脚计算是irq%8，所以这里需要加上8的偏移。之后设置table的chip为gis号。回到setup_routing_entry函数中，就把kvm_kernel_irq_routing_entry以gsi号位索引，加入到了map数组中对应的双链表中。再回到kvm_set_irq_routing函数中，接下来就是更新kvm结构中的irq_routing指针了。
+之前的初始化过程我们已经看见了，`.type`为`KVM_IRQ_ROUTING_IRQCHIP`，所以这里实际上就是把`e->gsi = ue->gsi;e->type = ue->type;`然后调用了`kvm_set_routing_entry`，该函数中主要是设置了`kvm_kernel_irq_routing_entry`中的**set函数**，APIC的话设置的是kvm_set_ioapic_irq函数，而pic的话设置kvm_set_pic_irq函数，然后设置irqchip的类型和管脚，对于IOAPIC也是直接复制过来，ＰＩＣ由于管脚计算是irq%8，所以这里需要加上8的偏移。之后设置table的chip为gis号。回到setup_routing_entry函数中，就把kvm_kernel_irq_routing_entry以gsi号位索引，加入到了map数组中对应的双链表中。再回到kvm_set_irq_routing函数中，接下来就是更新kvm结构中的irq_routing指针了。
 
