--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -918,5 +918,34 @@ static int setup_routing_entry(struct kvm *kvm,
 }
 ```
 
-之前的初始化过程我们已经看见了，`.type`为`KVM_IRQ_ROUTING_IRQCHIP`，所以这里实际上就是把`e->gsi = ue->gsi;e->type = ue->type;`然后调用了`kvm_set_routing_entry`，该函数中主要是设置了`kvm_kernel_irq_routing_entry`中的**set函数**，**APIC**的话设置的是`kvm_set_ioapic_irq`函数，而**pic**的话设置`kvm_set_pic_irq`函数，然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。回到`setup_routing_entry`函数中，就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**双链表**中。再回到kvm_set_irq_routing函数中，接下来就是更新kvm结构中的irq_routing指针了。
+之前的初始化过程我们已经看见了，`.type`为`KVM_IRQ_ROUTING_IRQCHIP`，所以这里实际上就是把`e->gsi = ue->gsi;e->type = ue->type;`然后调用了`kvm_set_routing_entry`，该函数中主要是设置了`kvm_kernel_irq_routing_entry`中的**set函数**，**APIC**的话设置的是`kvm_set_ioapic_irq`函数，而**pic**的话设置`kvm_set_pic_irq`函数，然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。回到`setup_routing_entry`函数中，就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**双链表**中。再回到`kvm_set_irq_routing`函数中，接下来就是**更新kvm结构**中的`irq_routing`指针了。
 
+中断虚拟化流程
+
+```cpp
+kvm_set_irq
+　　kvm_ioapic_set_irq
+　　　　　ioapic_service
+　　　　　　ioapic_deliver
+　　　　　　　　kvm_irq_delivery_to_apic
+　　　　　　　　　　kvm_apic_set_irq
+　　　　　　　　　　　　__apic_accept_irq
+　　　　　　　　　　　　　　vmx_deliver_posted_interrupt
+
+具体注入阶段
+vcpu_enter_guest
+　　　kvm_apic_accept_events
+　　　　　　inject_pending_event
+　　　　　　　　kvm_queue_interrupt
+　　　　　　　　　　vmx_inject_irq
+　　　　　　　　　　　　vmcs_write32(VM_ENTRY_INTR_INFO_FIELD, intr);
+
+ 中断路由表初始化
+
+x86.c kvm_arch_vm_ioctl
+　　kvm_setup_default_irq_routing irq_common.c
+　　　　kvm_set_irq_routing irq_chip.c
+　　　　　　setup_routing_entry irq_chip.c
+　　　　　　　　kvm_set_routing_entry irq_chip.c
+　　　　　　　　　　e->set = kvm_set_ioapic_irq; irq_common.c
+```
