--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -14,11 +14,11 @@
 
 ## PIT主要为Intel 8254 PIT芯片
 
-PIT(Programmable Interval Timer), 可编程间隔定时器
+**PIT**(**Programmable Interval Timer**), **可编程间隔定时器**
 
-每个PC机中都有一个PIT, 通过IRQ产生周期性的时钟中断信号来充当系统定时器.
+**每个PC机**中都有一个**PIT**, 通过**IRQ**产生**周期性的时钟中断信号**来充当**系统定时器**.
 
-i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h.
+i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43h`.
 
 8254 PIT有**3个计时通道**, 每个通道都有其不同的用途:
 
@@ -28,7 +28,7 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h
 
 ## PIC主要为8259A PIC芯片
 
-PIC(Programmable Interrupt Controller), 可编程中断控制器
+**PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
 
 它具有IR0 ~ IR7共8个中断管脚连接到外部设备. 中断管脚具有优先级, 其中IR0优先级最高, IR7最低.
 
