--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -30,7 +30,7 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43
 
 **PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
 
-它具有IR0 ~ IR7共8个中断管脚连接到外部设备. 中断管脚具有优先级, 其中IR0优先级最高, IR7最低.
+它具有IR0 ~ IR7共**8个中断管脚**连接到**外部设备**. **中断管脚**具有**优先级**, 其中IR0优先级最高, IR7最低.
 
 PIC有三个重要的寄存器:
 
