--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -117,7 +117,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
                 r = -EINVAL;
                 if (kvm->created_vcpus)
                         goto create_irqchip_unlock;
-
+                // 主要过程
                 r = kvm_pic_init(kvm);
                 if (r)
                         goto create_irqchip_unlock;
@@ -137,4 +137,63 @@ kvm_vm_ioctl()  // vm ioctl的入口
                 /* Write kvm->irq_routing before enabling irqchip_in_kernel. */
                 smp_wmb();
                 kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;
+```
+
+
+```cpp
+int kvm_pic_init(struct kvm *kvm)
+{
+        struct kvm_pic *s;
+        int ret;
+
+        s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);
+        if (!s)
+                return -ENOMEM;
+        spin_lock_init(&s->lock);
+        // 该pic所属的kvm虚拟机
+        s->kvm = kvm;
+        s->pics[0].elcr_mask = 0xf8;
+        s->pics[1].elcr_mask = 0xde;
+        s->pics[0].pics_state = s;
+        s->pics[1].pics_state = s;
+
+        /*
+         * Initialize PIO device
+         */
+        kvm_iodevice_init(&s->dev_master, &picdev_master_ops);
+        kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops);
+        kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops);
+        mutex_lock(&kvm->slots_lock);
+        ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2,
+                                      &s->dev_master);
+        if (ret < 0)
+                goto fail_unlock;
+
+        ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave);
+        if (ret < 0)
+                goto fail_unreg_2;
+
+        ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr);
+        if (ret < 0)
+                goto fail_unreg_1;
+
+        mutex_unlock(&kvm->slots_lock);
+
+        kvm->arch.vpic = s;
+
+        return 0;
+
+fail_unreg_1:
+        kvm_io_bus_unregister_dev(kvm, KVM_PIO_BUS, &s->dev_slave);
+
+fail_unreg_2:
+        kvm_io_bus_unregister_dev(kvm, KVM_PIO_BUS, &s->dev_master);
+
+fail_unlock:
+        mutex_unlock(&kvm->slots_lock);
+
+        kfree(s);
+
+        return ret;
+}
 ```
