--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -64,7 +64,7 @@ PIT创建:
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-# PIC的创建
+# PIC(8259)的创建
 
 ## 整体流程
 
@@ -111,17 +111,18 @@ kvm_vm_ioctl()  // vm ioctl的入口
                 mutex_lock(&kvm->lock);
 
                 r = -EEXIST;
+                // 如果irqchip在kvm中实现, 则不用创建
                 if (irqchip_in_kernel(kvm))
                         goto create_irqchip_unlock;
 
                 r = -EINVAL;
                 if (kvm->created_vcpus)
                         goto create_irqchip_unlock;
-                // 主要过程
+                // 主要过程, 是8259
                 r = kvm_pic_init(kvm);
                 if (r)
                         goto create_irqchip_unlock;
-
+                // ioapic
                 r = kvm_ioapic_init(kvm);
                 if (r) {
                         kvm_pic_destroy(kvm);
@@ -137,10 +138,15 @@ kvm_vm_ioctl()  // vm ioctl的入口
                 /* Write kvm->irq_routing before enabling irqchip_in_kernel. */
                 smp_wmb();
                 kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;
+        create_irqchip_unlock:
+                mutex_unlock(&kvm->lock);
+                break;
+        }
 ```
 
 
 ```cpp
+// arch/x86/kvm/i8259.c
 int kvm_pic_init(struct kvm *kvm)
 {
         struct kvm_pic *s;
