--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -71,7 +71,8 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
  ├─  kvm_arch_vm_ioctl()     
- |   ├─ handle_ept_violation()   // ept violation异常的处理
+ |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则
+ |   ├─ kvm_pic_init()   // ept violation异常的处理
  |   |   |─ exit_qualification = vmcs_readl(EXIT_QUALIFICATION);   // 读取exit_qualification字段
  |   |   |─ gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);   // 读取虚拟机的物理地址
  |   |   |─ error_code = XXXX;   // 拼凑error
