--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -71,8 +71,11 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
  ├─  kvm_arch_vm_ioctl()     
- |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则
- |   ├─ kvm_pic_init()   // ept violation异常的处理
+ |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+ |   ├─ kvm_pic_init()   // pic创建, 8259
+ |   ├─ kvm_ioapic_init()   // ept violation异常的处理
+ |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
+ |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // ept violation异常的处理
  |   |   |─ exit_qualification = vmcs_readl(EXIT_QUALIFICATION);   // 读取exit_qualification字段
  |   |   |─ gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);   // 读取虚拟机的物理地址
  |   |   |─ error_code = XXXX;   // 拼凑error
@@ -152,7 +155,7 @@ int kvm_pic_init(struct kvm *kvm)
 {
         struct kvm_pic *s;
         int ret;
-
+        // 分配 kvm_pic 结构体
         s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);
         if (!s)
                 return -ENOMEM;
