--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
@@ -3,14 +3,14 @@
 
 <!-- code_chunk_output -->
 
-* [1 硬件中断](#1-硬件中断)
-	* [1.1 Maskable interrupt(可屏蔽中断)](#11-maskable-interrupt可屏蔽中断)
-	* [1.2 Non-Maskable Interrupt(NMI, 不可屏蔽中断)](#12-non-maskable-interruptnmi-不可屏蔽中断)
-* [2 软件中断](#2-软件中断)
+- [硬件中断](#硬件中断)
+  - [Maskable interrupt(可屏蔽中断)](#maskable-interrupt可屏蔽中断)
+  - [Non-Maskable Interrupt(NMI, 不可屏蔽中断)](#non-maskable-interruptnmi-不可屏蔽中断)
+- [软件中断](#软件中断)
 
 <!-- /code_chunk_output -->
 
-在x86/x64体系中,**中断**和**异常**使用**相同的执行环境和机制**,包括:
+在x86/x64体系中, **中断**和**异常**使用**相同的执行环境和机制**, 包括:
 
 ① 使用在同一个IDT(Interrupt Descriptor Table)或IVT(Interrupt Vector Table)
 
@@ -28,7 +28,7 @@
 
 ④ 对于**异常**是**不可屏蔽**的
 
-本章中,将分别使用Interrupt(中断)和Exception(异常)的术语,除非特别说明,否则将互不适用
+本章中,将分别使用Interrupt(中断)和Exception(异常)的术语, 除非特别说明, 否则将**互不适用**
 
 可**产生中断**的**中断源**来自:
 
@@ -40,7 +40,7 @@
 
 在一个**支持APIC模块**的**处理器**上,典型地,**LINT0**被连接到**ISA bus的8259A PIC(Programming Interrupt Controller**)上,**LINT1**会被连接到**NMI pin**上.
 
-# 1 硬件中断
+# 硬件中断
 
 **外部硬件中断**来自**处理器**的**INTR pin**, **NMI pin**和**I/O APIC的中断消息**, 我们看下面关于APIC架构的图.
 
@@ -66,7 +66,7 @@
 
 这些**IPI中断通过system bus**进行传递, 或许并不能称为硬件中断, 称为内部中断较为合适.
 
-## 1.1 Maskable interrupt(可屏蔽中断)
+## Maskable interrupt(可屏蔽中断)
 
 可屏蔽的中断如下.
 
@@ -76,11 +76,11 @@
 
 ③ 来自芯片组上的I/O APIC产生的中断消息
 
-## 1.2 Non-Maskable Interrupt(NMI, 不可屏蔽中断)
+## Non-Maskable Interrupt(NMI, 不可屏蔽中断)
 
 通过**处理器NMI pin接收的中断请求**是不可屏蔽的, 在**支持APIC的处理器**上**LINT1 pin被作为NMI pin**使用, 接收来自**外部的NMI信号**.
 
-# 2 软件中断
+# 软件中断
 
 在软件上可以使用**INT指令主动发起中断**, 进入中断处理程序, 如下.
 
