--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
@@ -3,12 +3,15 @@
 
 <!-- code_chunk_output -->
 
-- [硬件中断](#硬件中断)
-  - [Maskable interrupt(可屏蔽中断)](#maskable-interrupt可屏蔽中断)
-  - [Non-Maskable Interrupt(NMI, 不可屏蔽中断)](#non-maskable-interruptnmi-不可屏蔽中断)
-- [软件中断](#软件中断)
+- [1. 中断和异常](#1-中断和异常)
+- [2. 硬件中断](#2-硬件中断)
+  - [2.1. Maskable interrupt: 可屏蔽中断](#21-maskable-interrupt-可屏蔽中断)
+  - [2.2. Non-Maskable Interrupt: NMI, 不可屏蔽中断](#22-non-maskable-interrupt-nmi-不可屏蔽中断)
+- [3. 软件中断](#3-软件中断)
 
 <!-- /code_chunk_output -->
+
+# 1. 中断和异常
 
 在x86/x64体系中, **中断**和**异常**使用**相同的执行环境和机制**, 包括:
 
@@ -18,7 +21,7 @@
 
 ③ 在Handling Interrupt(中断处理)流程上是一致的,当然有些额外区别
 
-**中断**和**异常**事件可以是**主动发起**和**被动产生**的,它们在处理流程中有几个显著区别.
+**中断**和**异常**事件可以是**主动发起**和**被动产生**的, 它们在处理流程中有几个显著区别.
 
 ① 对于**硬件**产生的**可屏蔽中断**事件,在**ISR(中断服务例程**)处理完毕后必须**发送EOI(End Of Interrupt**)命令通知**Interrupt controller(中断控制器**)
 
@@ -40,7 +43,7 @@
 
 在一个**支持APIC模块**的**处理器**上,典型地,**LINT0**被连接到**ISA bus的8259A PIC(Programming Interrupt Controller**)上,**LINT1**会被连接到**NMI pin**上.
 
-# 硬件中断
+# 2. 硬件中断
 
 **外部硬件中断**来自**处理器**的**INTR pin**, **NMI pin**和**I/O APIC的中断消息**, 我们看下面关于APIC架构的图.
 
@@ -54,7 +57,7 @@
 
 图2是一幅经典的APIC结构图,上面介绍了处理器所接受的中断源,包括:
 
-① 由**Local APIC**的**LINT0接口**连接到**8259A的INTR接口**上,当**APIC被disable**的时候,**LINT0接口**被**直接作为外部中断控制器8259A的INTR接口**,接受**来自8259A的中断请求**
+① 由**Local APIC！！！** 的**LINT0接口！！！** 连接到**8259A的INTR接口！！！** 上, 当**APIC被disable**的时候,**LINT0接口**被**直接作为外部中断控制器8259A的INTR接口**, 接受**来自8259A！！！的中断请求**
 
 ② **LINT1**接受来自**外部的NMI请求**
 
@@ -66,7 +69,7 @@
 
 这些**IPI中断通过system bus**进行传递, 或许并不能称为硬件中断, 称为内部中断较为合适.
 
-## Maskable interrupt(可屏蔽中断)
+## 2.1. Maskable interrupt: 可屏蔽中断
 
 可屏蔽的中断如下.
 
@@ -76,11 +79,11 @@
 
 ③ 来自芯片组上的I/O APIC产生的中断消息
 
-## Non-Maskable Interrupt(NMI, 不可屏蔽中断)
+## 2.2. Non-Maskable Interrupt: NMI, 不可屏蔽中断
 
 通过**处理器NMI pin接收的中断请求**是不可屏蔽的, 在**支持APIC的处理器**上**LINT1 pin被作为NMI pin**使用, 接收来自**外部的NMI信号**.
 
-# 软件中断
+# 3. 软件中断
 
 在软件上可以使用**INT指令主动发起中断**, 进入中断处理程序, 如下.
 
