--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
@@ -3,12 +3,16 @@
 
 <!-- code_chunk_output -->
 
-- [1. 运行错误产生的异常](#1-运行错误产生的异常)
-- [2. 由软件主动发起异常](#2-由软件主动发起异常)
-- [3. Machine Check(机器检查)异常](#3-machine-check机器检查异常)
-- [4. 总结](#4-总结)
+- [1. 异常源](#1-异常源)
+  - [1.1. 异常的不可屏蔽和NMI](#11-异常的不可屏蔽和nmi)
+- [2. 运行错误产生的异常](#2-运行错误产生的异常)
+- [3. 由软件主动发起异常](#3-由软件主动发起异常)
+- [4. Machine Check(机器检查)异常](#4-machine-check机器检查异常)
+- [5. 总结](#5-总结)
 
 <!-- /code_chunk_output -->
+
+# 1. 异常源
 
 可产生异常的异常源来自:
 
@@ -18,15 +22,17 @@
 
 ③ **Machine\-Check(机器检查)引发的异常**
 
-异常是不能被屏蔽的, 无论是执行错误还是主动引发异常, 实质上是在处理器内部引发.
+异常是**不能被屏蔽的**, 无论是执行错误还是主动引发异常, 实质上是在**处理器内部引发**.
+
+## 1.1. 异常的不可屏蔽和NMI
 
 这个不可屏蔽与NMI是不同的
 
-① NMI由硬件引起, 包括: 外部NMI源, 以及local APIC与I/O APIC交付的NMI
+① NMI由硬件引起, 包括: **外部NMI源**, 以及**local APIC**与**I/O APIC**交付的NMI
 
-② 对于外部NMI源可以通过de\-assert PIN方式或屏蔽LINT1的方式来屏蔽中断.
+② 对于**外部NMI源**可以通过**de\-assert PIN方式**或**屏蔽LINT1的方式**来屏蔽中断.
 
-# 1. 运行错误产生的异常
+# 2. 运行错误产生的异常
 
 由**运行代码错误产生的异常**是很常见的, 在**保护模式**下我们或许会常**与\#GP(General Protected)异常**或**与\#PF(Page Fault)异常**打交道
 
@@ -40,7 +46,7 @@
 
 后面将看到这些异常有些可以恢复,有些不行.
 
-# 2. 由软件主动发起异常
+# 3. 由软件主动发起异常
 
 软件可以使用下面指令发起异常
 
@@ -50,11 +56,11 @@
 
 ③ **BOUND指令**: 软件执行BOUND指令, 处理器检测到**操作数越界**时将产生`#BR`(Bound Range)异常. **64位模式下指令无效**.
 
-# 3. Machine Check(机器检查)异常
+# 4. Machine Check(机器检查)异常
 
 处理器提供了对**处理器内部或外部进行检查**的机制, 当检测到错误的发生时, 处理器将产生`#MC`(Machine Check)异常
 
-# 4. 总结
+# 5. 总结
 
 一般, 硬件异常是指**除了\#BP(INT3指令**)与\#**OF异常(INTO指令**)以外的**所有异常**, 它们属于**fault或abort类型异常**. 也包括由**BOUND指令产生的\#BR异常**及由**UD指令产生的\#UD异常**. 所有类型的\#DB异常(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 能**产生错误码**的**硬件异常**是: \#**DF, \#TS, \#NP, \#SS, \#GP, \#PF及\#AC这7类**.
 
