--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
@@ -13,26 +13,6 @@
 
 # 1. 中断和异常
 
-在x86/x64体系中, **中断**和**异常**使用**相同的执行环境和机制**, 包括:
-
-① 使用在同一个IDT(Interrupt Descriptor Table)或IVT(Interrupt Vector Table)
-
-② 在同一个**Vector范围(0 \~ 255, 一个字节宽**)内
-
-③ 在Handling Interrupt(中断处理)流程上是一致的,当然有些额外区别
-
-**中断**和**异常**事件可以是**主动发起**和**被动产生**的, 它们在处理流程中有几个显著区别.
-
-① 对于**硬件**产生的**可屏蔽中断**事件,在**ISR(中断服务例程**)处理完毕后必须**发送EOI(End Of Interrupt**)命令通知**Interrupt controller(中断控制器**)
-
-② 对于**某些异常**, **处理器**会产生相应的**Error Code(错误码**), **Exception处理程序**可以根据情况进行处理
-
-③ **外部**和**内部**的**硬件中断请求**,可以进行**mask(屏蔽**),除了**NMI(不可屏蔽中断**)和一些**由处理器pin产生的中断事件**外(例如: **SMI**)
-
-④ 对于**异常**是**不可屏蔽**的
-
-本章中,将分别使用Interrupt(中断)和Exception(异常)的术语, 除非特别说明, 否则将**互不适用**
-
 可**产生中断**的**中断源**来自:
 
 ① **硬件**上产生的中断
@@ -57,7 +37,7 @@
 
 图2是一幅经典的APIC结构图,上面介绍了处理器所接受的中断源,包括:
 
-① 由**Local APIC！！！** 的**LINT0接口！！！** 连接到**8259A的INTR接口！！！** 上, 当**APIC被disable**的时候,**LINT0接口**被**直接作为外部中断控制器8259A的INTR接口**, 接受**来自8259A！！！的中断请求**
+① 由**Local APIC！！！** 的**LINT0接口！！！** 连接到**8259A的INTR接口！！！** 上, 当**APIC被disable！！！** 的时候,**LINT0接口**被**直接作为外部中断控制器8259A的INTR接口**, 接受**来自8259A！！！的中断请求**
 
 ② **LINT1**接受来自**外部的NMI请求**
 
@@ -73,7 +53,7 @@
 
 可屏蔽的中断如下.
 
-① 通过处理器的INTR pin接收到的中断请求,典型地,INTR连接到8259A中断控制器上. 在支持APIC的处理器上, LINT0 pin被作为INTR使用连接外部中断控制器.
+① 通过处理器的**INTR pin**接收到的中断请求, 典型地, INTR连接到**8259A中断控制器**上. 在**支持APIC的处理器**上, **LINT0 pin**被作为**INTR**使用连接外部中断控制器.
 
 ② 通过Local APIC产生的本地中断源
 
