--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 中断和异常](#1-中断和异常)
+- [1. 中断源](#1-中断源)
 - [2. 硬件中断](#2-硬件中断)
   - [2.1. Maskable interrupt: 可屏蔽中断](#21-maskable-interrupt-可屏蔽中断)
   - [2.2. Non-Maskable Interrupt: NMI, 不可屏蔽中断](#22-non-maskable-interrupt-nmi-不可屏蔽中断)
@@ -11,7 +11,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 中断和异常
+# 1. 中断源
 
 可**产生中断**的**中断源**来自:
 
@@ -19,9 +19,9 @@
 
 ② **软件**上发起的中断
 
-在**硬件**上的来自于**处理器外部**和**处理器内部**.处理器**外部硬件中断**来自**各种pin信号接口**和**Local APIC**的**LINT0**和**LINT1引脚**,以及由**外部I/O APIC发送过来的中断消息**.
+在**硬件**上的来自于**处理器外部**和**处理器内部**. 处理器**外部硬件中断**来自**各种pin信号接口**和**Local APIC**的**LINT0**和**LINT1引脚**,以及由**外部I/O APIC发送过来的中断消息**.
 
-在一个**支持APIC模块**的**处理器**上,典型地,**LINT0**被连接到**ISA bus的8259A PIC(Programming Interrupt Controller**)上,**LINT1**会被连接到**NMI pin**上.
+在一个**支持APIC模块**的**处理器**上, 典型地,**LINT0**被连接到**ISA bus的8259A PIC(Programming Interrupt Controller**)上, **LINT1**会被连接到**NMI pin**上.
 
 # 2. 硬件中断
 
