--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/0. 中断和异常.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/0. 中断和异常.md
@@ -1,5 +1,5 @@
 
-
+# 中断和异常的相同点
 
 在x86/x64体系中, **中断**和**异常**使用**相同的执行环境和机制**, 包括:
 
@@ -9,9 +9,11 @@
 
 ③ 在Handling Interrupt(中断处理)**流程上是一致的**, 当然有些额外区别
 
-**中断**和**异常**事件可以是**主动发起**和**被动产生**的, 它们在处理流程中有几个显著区别.
+# 中断和异常在处理流程的区别
 
-① 对于**硬件**产生的**可屏蔽中断**事件,在**ISR(中断服务例程**)处理完毕后必须**发送EOI(End Of Interrupt**)命令通知**Interrupt controller(中断控制器**)
+**中断**和**异常**事件可以是**主动发起**和**被动产生**的, 它们在处理流程中有**几个显著区别**.
+
+① 对于**硬件**产生的**可屏蔽中断**事件, 在**ISR(中断服务例程**)处理完毕后必须**发送EOI(End Of Interrupt**)命令通知**Interrupt controller(中断控制器**)
 
 ② 对于**某些异常**, **处理器**会产生相应的**Error Code(错误码**), **Exception处理程序**可以根据情况进行处理
 
