--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/0. LPC控制器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/0. LPC控制器.md
@@ -35,4 +35,4 @@
 
 > LPC是什么?
 
-**LPC全称Low Pin Count**, 是**一种bus**, 简单讲, 可以看作是ISA bus的取代者, 是兼容ISA bus的. 因此PCI\-to\-ISA bridge可以看作PCI\-to\-LPC bridge.
+**LPC全称Low Pin Count**, 是**一种bus**, 简单讲, 可以看作是**ISA bus的取代者**, 是兼容ISA bus的. 因此`PCI-to-ISA bridge`可以看作`PCI-to-LPC bridge`.
