--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/0. LPC控制器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/0. LPC控制器.md
@@ -1,7 +1,7 @@
 
 处理器的**INTR pin**接收并响应来自**外部8259中断控制器**传送过来的中断请求. **8259中断控制器**位于**PCI\-to\-ISA bridge(即南桥)芯片**的**LPC控制器**里.
 
-根据Intel的chipset datasheet资料, **PCI\-to\-ISA bridge**位于**PCI bus的bus 0, Device 31**位置上, 包括下面几个**function**:
+根据Intel的chipset datasheet资料, `PCI-to-ISA bridge`位于**PCI bus的bus 0, Device 31**位置上, 包括下面几个**function**:
 
 ① **LPC控制器**: function 0
 
@@ -35,4 +35,4 @@
 
 > LPC是什么?
 
-**LPC全称Low Pin Count**, 是**一种bus**, 简单讲, 可以看作是**ISA bus的取代者**, 是兼容ISA bus的. 因此`PCI-to-ISA bridge`可以看作`PCI-to-LPC bridge`.
+**LPC全称Low Pin Count**, 是**一种bus！！！**, 简单讲, 可以看作是**ISA bus的取代者**, 是兼容ISA bus的. 因此`PCI-to-ISA bridge`可以看作`PCI-to-LPC bridge`.
