--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/0. LPC控制器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/0. LPC控制器.md
@@ -13,7 +13,7 @@
 
 ⑤ Thermal系统: function 6
 
-8259控制器位于**0号功能的LPC控制器**里. **LPC控制器**控制下面几个部件.
+**8259控制器**位于**0号功能的LPC控制器**里. **LPC控制器**控制下面几个部件.
 
 ① DMA
 
