--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -3,34 +3,49 @@
 
 <!-- code_chunk_output -->
 
-- [1 中断架构](#1-中断架构)
-  - [1.1 可编程中断控制器](#11-可编程中断控制器)
-  - [1.2 PIC](#12-pic)
-  - [1.3 APIC](#13-apic)
-  - [1.4 处理器间中断](#14-处理器间中断)
-  - [1.5 中断的重要概念](#15-中断的重要概念)
-    - [1.5.1 中断的分类](#151-中断的分类)
-    - [1.5.2 中断的优先级](#152-中断的优先级)
-    - [1.5.3 中断的屏蔽](#153-中断的屏蔽)
-    - [1.5.4 IDT表](#154-idt表)
-    - [1.5.5 中断门](#155-中断门)
-- [2 异常架构](#2-异常架构)
-- [3 中断与异常总结](#3-中断与异常总结)
-- [4 操作系统对中断/异常的处理流程](#4-操作系统对中断异常的处理流程)
+- [硬件基础](#硬件基础)
+- [中断架构](#中断架构)
+  - [可编程中断控制器](#可编程中断控制器)
+  - [PIC](#pic)
+  - [APIC](#apic)
+  - [处理器间中断](#处理器间中断)
+  - [中断的重要概念](#中断的重要概念)
+    - [中断的分类](#中断的分类)
+    - [中断的优先级](#中断的优先级)
+    - [中断的屏蔽](#中断的屏蔽)
+    - [IDT表](#idt表)
+    - [中断门](#中断门)
+- [异常架构](#异常架构)
+- [中断与异常总结](#中断与异常总结)
+- [操作系统对中断/异常的处理流程](#操作系统对中断异常的处理流程)
 
 <!-- /code_chunk_output -->
 
-中断和异常会打算顺序执行的程序流, 转而进入一条完全不同的执行路径.
+# 硬件基础
 
-# 1 中断架构
+简单介绍点硬件知识，方便后面的讲解
+
+最老的中断控制芯片就是**8259A**了，也就是PIC芯片，该种芯片8个引脚，为了扩展引脚数目，引入了主从两块芯片，利用一个引脚连接主从两个芯片，这样就一共有15个引脚了。IRQ = 其实base号 + pin。接收到设备中断后，通过拉高引脚通知CPU，CPU收到中断发送两个INT ACK到INTA，第二个INTA期间，PIC向CPU提交中断vector。
+
+后来出现了APIC，APIC分为IOAPIC和LAPIC。IOAPIC位于南桥，有24个引脚针，LAPIC位与CPU内部。LAPIC每CPU一个；IO APIC可以一个系统里面有多个，但是KVM中只实现了一个，可以根据自己的需要进行添加。设备发送中断，发送到IO APIC；IO APIC中存在着一个PRT表，每个PRT的表项成为RTE，RTE是每个引脚一个，IOAPIC引脚收到中断消息后，根据RTE得到目标LAPIC，并格式化出一个中断消息发送给LAPIC，同时置位remote irr(level)。LAPIC接受到中断消息后，提取其中的VECTOR并设置IRR后，进行中断的选取，取得优先级最高的中断后，清除IRR，设置ISR，提交CPU进行中断处理，CPU处理完中断后，写LAPIC的EOI，通知IOAPIC清除remote irr(level且deassert)。
+
+后来又出来的MSI中断，设备直接如果支持MSI的话，直接构造出MSI消息，MSI有个字段Address标明了中断目标地址，然后设备直接发送中断给LAPIC提交CPU，这种方式下，直接绕过了IOAPIC，效率更高。
+
+这里需要额外说明一下，中断的触发方式分为level触发和edge触发；level触发就是一直将引脚保持在高电平（电平为1）直到中断完成，现在PCI/PCIE设备都是level触发；edge就是通过一个电平边缘跳变来触发的中断,电平从0到1，或者从1到0，原来的ISA设备都是edge触发，kvm中通过发送level = 0和level = 1的两个中断来模拟一个edge中断。
+
+GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中每个中断源指定一个唯一的中断号。如果GSI base 为0，每个管脚的GSI=GSI base + pin，15以上的GSI号和IRQ值相等，但是[0~15]是按照规范映射的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
+
+中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
+
+# 中断架构
 
 从某种意义上, **现代计算机架构**是由**大量的中断事件驱动(！！！**)的. **中断**提供给**外部硬件设备**一种"**打断CPU当前执行任务, 并响应自身服务！！！**"的手段.
 
-## 1.1 可编程中断控制器
+## 可编程中断控制器
 
 **中断**从设备发送到CPU需要由被称为"**中断控制器**"的部件**转发**(MSI除外). 中断控制器发展至今, 经历了PIC(Programmable Interrupt Controller, 可编程中断控制器)和APIC(Advanced Programmable Interrupt Controller, 高级可编程中断控制器)两个阶段.
 
-## 1.2 PIC
+## PIC
 
 ![2019-07-09-13-53-59.png](./images/2019-07-09-13-53-59.png)
 
@@ -78,7 +93,7 @@ PIC处理中断流程
 
 ⑧ **中断完成**后，在**AEOI（Automatic End of Interrupt）模式**里，8259在**第2个INTA\#结束后**自动**清ISR相应的位**。否则必须发送一个**EOI命令给8259**。
 
-## 1.3 APIC
+## APIC
 
 PIC可以在UP(单处理器)平台上工作, 但无法用于MP(多处理器)平台. 因此, APIC应运而生.
 
@@ -110,15 +125,15 @@ APIC系统中, 中断的发起大致流程如下.
 
 ⓻ CPU处理完中断, 软件写EOI寄存器告知中断处理完成, 对于level触发的中断, IRR中对应位清0. LAPIC可提交下一个中断.
 
-## 1.4 处理器间中断
+## 处理器间中断
 
 在MP(多处理器)平台上, 多个CPU要协同工作, 处理器间中断(Inter\-processor Interrupt, IPI)提供CPU之间相互通信的手段. CPU可以通过LAPIC的ICR(Interrupt Command Register, 中断命令寄存器)向指定的一个/多个CPU发送中断.
 
 操作系统通常使用IPI来完成诸如**进程转移**、**中断平衡**和**TLB刷新**等工作.
 
-## 1.5 中断的重要概念
+## 中断的重要概念
 
-### 1.5.1 中断的分类
+### 中断的分类
 
 中断可以从很多方面分类, 从中断源角度看, 可以分为如下几类.
 
@@ -134,7 +149,7 @@ APIC系统中, 中断的发起大致流程如下.
 
 ⓶ level触发中断: 指中断以电平方式触发, 在中断程序应答设备前, 该电平一直有效. PCI设备使用这种触发方式.
 
-### 1.5.2 中断的优先级
+### 中断的优先级
 
 在使用**PIC**的系统中, PIC的**管脚**决定了**中断的优先级**, 连接**IR0**的设备具有**最高优先级**, 连接**IR7**的设备**优先级最低**. 
 
@@ -148,7 +163,7 @@ APIC系统中, 中断的发起大致流程如下.
 
 这里, GSI和IRQ可以看作等同的概念, 表示**某个设备的中断号**. 它们与**vector的关系**由操作系统决定, 通常是在**设备驱动注册中断处理程序**时由**操作系统分配**.
 
-### 1.5.3 中断的屏蔽
+### 中断的屏蔽
 
 无论是在PIC收到中断信号后, 还是**LAPIC！！！收到中断消息**后, 并不一定都是马上交给CPU处理的, 这还要取决于**CPU当前是否屏蔽中断**(不可屏蔽中断除外). 
 
@@ -164,13 +179,13 @@ APIC系统中, 中断的发起大致流程如下.
 
 - IOAPIC可通过**RTE中的mask位**屏蔽对应管脚. 该方法不会讲中断依附(pengding)到IRR, 而是直接忽略, 对于edge触发中断可能导致中断丢失.
 
-### 1.5.4 IDT表
+### IDT表
 
 IDT实际上就是个大数组, 用于存放各种"门"(中断门、陷阱门、任务门). 这些门是中断和异常通往各自处理函数的入口. 当一个中断或异常发生, CPU用它们对应的vector号索引IDT表以获得对应的"门". 
 
 **IDT表**的**基地址**存放在**IDTR寄存器**中，该寄存器与GDTR类似，由一个**基地址**字段（Base）和**长度**字段（Limit）构成。
 
-### 1.5.5 中断门
+### 中断门
 
 "门"是入口, 中断门就是中断的入口. 中断门实际上是一种段描述符, 称为**系统描述符**, 由**段描述符的S位控制**. 格式如图.
 
@@ -180,7 +195,7 @@ IDT实际上就是个大数组, 用于存放各种"门"(中断门、陷阱门、
 
 通常**操作系统的中断都用了中断门**, 没有使用陷阱门. 中断门和陷阱门唯一区别在于程序通过中断门跳转后, EFLAGS寄存器的IF位自动清0, 中断关闭. 而陷阱门没有.
 
-# 2 异常架构
+# 异常架构
 
 和中断相比, 异常最大的不同在于它是在程序的执行过程中同步发生的. 例如下面
 
@@ -206,11 +221,11 @@ void main()
 
 ![](./images/2019-07-01-16-22-26.png)
 
-# 3 中断与异常总结
+# 中断与异常总结
 
 ![](./images/2019-07-01-16-22-04.png)
 
-# 4 操作系统对中断/异常的处理流程
+# 操作系统对中断/异常的处理流程
 
 各个操作系统对于中断/异常处理实现不同, 但基本流程如下.
 
