--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -7,6 +7,8 @@
   - [PIC: 8259A](#pic-8259a)
   - [APIC](#apic)
   - [MSI](#msi)
+  - [中断触发方式](#中断触发方式)
+  - [GSI](#gsi)
 - [中断架构](#中断架构)
   - [可编程中断控制器](#可编程中断控制器)
   - [PIC](#pic)
@@ -30,7 +32,9 @@
 
 ## PIC: 8259A
 
-最老的中断控制芯片就是**8259A**了，也就是PIC芯片，该种芯片8个引脚，为了扩展引脚数目，引入了主从两块芯片，利用一个引脚连接主从两个芯片，这样就一共有15个引脚了。IRQ = 其实base号 + pin。**接收到设备中断**后，通过**拉高引脚**通知**CPU**，CPU收到中断发送**两个INT ACK**到**INTA**，第二个INTA期间，PIC向CPU提交中断vector。
+最老的中断控制芯片就是**8259A**了，也就是PIC芯片，该种芯片8个引脚，为了扩展引脚数目，引入了主从两块芯片，利用一个引脚连接**主从两个芯片**，这样就一共有**15个引脚**了。
+
+**IRQ = 起始base号 + pin**。**接收到设备中断**后，通过**拉高引脚**通知**CPU**，CPU收到中断发送**两个INT ACK**到**INTA**，第二个INTA期间，PIC向CPU提交中断vector。
 
 ## APIC
 
@@ -40,12 +44,18 @@
 
 后来又出来的MSI中断，设备直接如果支持MSI的话，直接构造出MSI消息，MSI有个字段Address标明了中断目标地址，然后设备直接发送中断给LAPIC提交CPU，这种方式下，直接绕过了IOAPIC，效率更高。
 
+## 中断触发方式
+
 这里需要额外说明一下，中断的触发方式分为level触发和edge触发；
 
 - **level触发**就是一直将**引脚**保持在**高电平**（电平为**1**）直到**中断完成**，现在**PCI/PCIE设备**都是**level触发**；
-- **edge**就是通过**一个电平边缘跳变**来触发的中断, 电平**从0到1**，或者**从1到0**，原来的ISA设备都是edge触发，kvm中通过发送level = 0和level = 1的两个中断来模拟一个edge中断。
+- **edge**就是通过**一个电平边缘跳变**来触发的中断, 电平**从0到1**，或者**从1到0**，原来的**ISA设备**都是**edge触发**，在**kvm**中通过发送**level = 0**和**level = 1**的两个中断来**模拟一个edge中断**。
 
-GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中每个中断源指定一个唯一的中断号。如果GSI base 为0，每个管脚的GSI=GSI base + pin，15以上的GSI号和IRQ值相等，但是`[0~15]`是按照规范映射的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
+## GSI
+
+GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
+
+如果GSI base 为0，每个管脚的GSI=GSI base + pin，15以上的GSI号和IRQ值相等，但是`[0~15]`是按照规范映射的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
 
 中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
 
