--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -5,6 +5,8 @@
 
 - [1. 硬件基础](#1-硬件基础)
   - [1.1. PIC: 8259A](#11-pic-8259a)
+  - [PIT主要为Intel 8254 PIT芯片](#pit主要为intel-8254-pit芯片)
+  - [PIC主要为8259A PIC芯片](#pic主要为8259a-pic芯片)
   - [1.2. APIC](#12-apic)
   - [1.3. MSI](#13-msi)
   - [1.4. 中断触发方式](#14-中断触发方式)
@@ -35,6 +37,34 @@
 最老的中断控制芯片就是**8259A**了，也就是PIC芯片，该种芯片8个引脚，为了扩展引脚数目，引入了主从两块芯片，利用一个引脚连接**主从两个芯片**，这样就一共有**15个引脚**了。
 
 **IRQ = 起始base号 + pin**。**接收到设备中断**后，通过**拉高引脚**通知**CPU**，CPU收到中断发送**两个INT ACK**到**INTA**，第二个INTA期间，PIC向CPU提交中断vector。
+
+## PIT主要为Intel 8254 PIT芯片
+
+**PIT**(**Programmable Interval Timer**), **可编程间隔定时器**
+
+**每个PC机**中都有一个**PIT**, 通过**IRQ**产生**周期性的时钟中断信号**来充当**系统定时器**.
+
+i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43h`.
+
+8254 PIT有**3个计时通道**, 每个通道都有其不同的用途:
+
+- **通道0**用来负责**更新系统时钟**. 它在**每个时钟滴答**会通过**IRQ0**向系统发出一次**时钟中断信号**.
+- **通道1**通常用来控制**DMAC对RAM的刷新**
+- **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
+
+## PIC主要为8259A PIC芯片
+
+**PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
+
+它具有IR0 ~ IR7共**8个中断管脚**连接到**外部设备**. **中断管脚**具有**优先级**, 其中IR0优先级最高, IR7最低.
+
+PIC有三个重要的寄存器:
+
+(1) IRR(Interrupt Request Register, 中断请求寄存器)共8位, 对应IR0到IR7这8个中断管脚. 某位置为1表明收到了对应管脚的中断但未提交到CPU.
+
+(2) ISR(Interrupt Service Register, 中断请求寄存器): 共8位, 某位置为1表明对应管脚的中断已经提交到CPU处理, 但CPU还未处理完.
+
+(3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
 
 ## 1.2. APIC
 
