--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/1. 8259结构.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/1. 8259结构.md
@@ -24,7 +24,11 @@
 
 ![config](./images/1.png)
 
-每个8259A PIC的**IR口**都接一条**IRQ线(IRQ线是唯一的！！！**). **主片**的**IR0到IR7**对应着**IRQ0到IRQ7线**.除了**IR2 pin被接上从片的INTR pin**外, **从片**的**IR0到IR7**对应着**IRQ8到IRQ15**线. 由于**从片**串接到**主片**的**IR2 pin**上, **从片**的**IR1 pin**同时接到**IRQ2**和**IRQ9线**.
+每个8259A PIC的**IR口**都接一条**IRQ线(IRQ线是唯一的！！！**). 
+
+**主片**的**IR0到IR7**对应着**IRQ0到IRQ7线**.
+
+除了**IR2 pin被接上从片的INTR pin**外, **从片**的**IR0到IR7**对应着**IRQ8到IRQ15**线. 由于**从片**串接到**主片**的**IR2 pin**上, **从片**的**IR1 pin**同时接到**IRQ2**和**IRQ9线**.
 
 8259经历多次数代bus和芯片组变革, 保持绝大部分的兼容性. pin用途如下表
 
