--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -1,4 +1,13 @@
 
+# 虚拟中断子系统逻辑图
+
+KVM中断系统逻辑图如下
+
+![2020-05-03-18-49-41.png](./images/2020-05-03-18-49-41.png)
+
+KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的interface抽象基类，定义了**中断的触发方法**`set()`以及**每个引脚**和**GSI**的**映射关系**，这些都是**和芯片类型无关**的，具体的芯片都是继承和实现接口，虚拟设备的中断发送给IRQ CHIP接口开始中断的模拟；分别实现了PIC、IOAPIC以及MSI的set方法进行，通过set方法完成对于VCPU的中断注入。其中IOAPIC中对于每个引脚，又定义了PRT，IOAPIC收到中断后根据RTE格式化出中断消息并发送给目标LAPIC，LAPIC完成中断的选举和注入实现。
+
+
 
 
 # kvm_pic: PIC 芯片结构
@@ -40,3 +49,6 @@ struct kvm_pic {
 };
 ```
 
+# 参考
+
+https://blog.csdn.net/leoufung/article/details/53081207
