--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -22,7 +22,7 @@ KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的
 
 KVM中`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_table`结构体。
 
-kvm_irq_routing_table .chip每个成员对应一个引脚，内容记录了该引脚的GSI号，其实该成员已经不用了。kvm_irq_routing_table.map成员指向一个hash桶，桶上的每个元素对应一个抽象引脚，即每个链对一个IRQ号，链上的每个元素指向kvm_kernel_irq_routing_entry结构体，每个该结构体代表了一个具体芯片的set()方法的实现，在进行中断注入的时候，每种芯片的set方法都会被调用一下，在guest中会忽略没有实现的芯片类型发送的中断消息(其实这里是可以优化的，必经不需要多次的中断注入，在QEMU注册中断设备的时候就不要注册不需要的中断芯片类型)
+`kvm_irq_routing_table.chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。`kvm_irq_routing_table.map`成员指向一个hash桶，桶上的每个元素对应一个抽象引脚，即每个链对一个IRQ号，链上的每个元素指向kvm_kernel_irq_routing_entry结构体，每个该结构体代表了一个具体芯片的set()方法的实现，在进行中断注入的时候，每种芯片的set方法都会被调用一下，在guest中会忽略没有实现的芯片类型发送的中断消息(其实这里是可以优化的，必经不需要多次的中断注入，在QEMU注册中断设备的时候就不要注册不需要的中断芯片类型)
 
  
 
