--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
@@ -10,6 +10,45 @@
 
 <!-- /code_chunk_output -->
 
+中断从宏观上看可以分为软件部分和硬件部分。
+
+软件部分：
+
+软件部分在**操作系统**中实现，如Linux中断的**x86**，每一个中断对应一个**中断门**，中断门中包含中断处理函数（ISR或者别的）地址，优先级等等。CPU可以通过LIDT加载这个描述符表，跳转到指定的中断门。
+
+硬件部分：
+
+中断硬件部分就是产生中断脉冲，传给中断控制器，然后通知CPU，CPU在执行下条指令前会去查询中断情况，如果有中断信号，就执行中断。我们在这里模拟的就是硬件部分内容。
+
+因此中断的模拟按照我的理解可以分为两个主要部分，一个是中断源的模拟，一个是给虚拟机的VCPU响应中断。
+
+中断源模拟：
+
+中断源模拟我也不是很清楚，方法很多，可以直接响应Linux的驱动，也可以别的，比如时钟中断可以设置一个定时器，定时器到了就触发中断，但是键盘，鼠标，硬盘呢？这个等待高手回？欢迎大家来讨论。
+
+虚拟机响应虚拟中断：
+
+KVM中断虚拟化主要依赖于VT-x技术，VT-x主要提供了两种中断事件机制，分别是中断退出和中断注入。
+
+中断退出
+
+是指虚拟机发生中断时，主动使得客户机发生VM-exit，这样能够在主机中实现对客户机中断的注入。
+
+中断注入
+
+它是指将中断写入VMCS对应的中断信息位，来实现中断的注入，当中断完成后通过读取中断的返回信息来分析中断是否正确。这个也是这里要详细讲的地方。
+
+首先中断注入有个一个标志性的函数 kvm_set_irq()，这个是中断注入的最开始。
+
+中断退出和注入是个关系紧密的过程，一先一后，我们放在一起来讲解，下面来分析一下相关实现代码，首先从 kvm_set_irq()开始。
+
+函数位置： virt/kvm/irqchip.c
+
+函数参数：struct kvm *kvm，发生中断的客户机的结构体指针，我们知道在KVM模块中有个vm_list，链接了所有注册的虚拟机，当多次使用QEMU命令以后会产生多个虚拟机，不同虚拟机中公用一个KVM模块，通过这个kvm结构体来辨识是哪个虚拟机，当然每个虚拟机里面可以对应多个VCPU，别把这个概念弄混淆了；irq_source_id中断资源ID，对于KVM设备我们都会申请一个中断资源ID，注册KVM IO设备时申请的；irq中断请求号，这个是转化GSI之前的，比如时钟是0号，这里就是0，而不是32；level表示中断的高低电平；line_status暂不清楚含义。
+————————————————
+版权声明：本文为CSDN博主「leoufung」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：
+
 # 1. 中断虚拟化
 
 中断虚拟化，涉及两方面工作：
@@ -58,3 +97,5 @@ KVM用QEMU来提供**设备模拟**，与物理设备一样，**模拟的设备*
 # 4. 参考
 
 https://blog.csdn.net/xidianjiapei001/article/details/89293842
+
+https://blog.csdn.net/leoufung/article/details/48781089
