--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
@@ -14,7 +14,7 @@
 
 软件部分：
 
-软件部分在**操作系统**中实现，如Linux中断的**x86**，每一个中断对应一个**中断门**，中断门中包含中断处理函数（ISR或者别的）地址，优先级等等。CPU可以通过LIDT加载这个描述符表，跳转到指定的中断门。
+软件部分在**操作系统**中实现，如Linux中断的**x86**，每一个中断对应一个**中断门**，中断门中包含中断处理函数（ISR或者别的）地址，优先级等等。CPU可以通过**LIDT**加载这个描述符表，跳转到指定的中断门。
 
 硬件部分：
 
@@ -45,9 +45,8 @@ KVM中断虚拟化主要依赖于VT-x技术，VT-x主要提供了两种中断事
 函数位置： virt/kvm/irqchip.c
 
 函数参数：struct kvm *kvm，发生中断的客户机的结构体指针，我们知道在KVM模块中有个vm_list，链接了所有注册的虚拟机，当多次使用QEMU命令以后会产生多个虚拟机，不同虚拟机中公用一个KVM模块，通过这个kvm结构体来辨识是哪个虚拟机，当然每个虚拟机里面可以对应多个VCPU，别把这个概念弄混淆了；irq_source_id中断资源ID，对于KVM设备我们都会申请一个中断资源ID，注册KVM IO设备时申请的；irq中断请求号，这个是转化GSI之前的，比如时钟是0号，这里就是0，而不是32；level表示中断的高低电平；line_status暂不清楚含义。
-————————————————
-版权声明：本文为CSDN博主「leoufung」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：
+
+
 
 # 1. 中断虚拟化
 
