--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
@@ -18,9 +18,9 @@
 
 硬件部分：
 
-中断硬件部分就是产生中断脉冲，传给中断控制器，然后通知CPU，CPU在执行下条指令前会去查询中断情况，如果有中断信号，就执行中断。我们在这里模拟的就是硬件部分内容。
+中断硬件部分就是**产生中断脉冲**，**传给中断控制器**，然后**通知CPU**，CPU在执行**下条指令前**会去**查询中断情况**，如果有中断信号，就执行中断。我们在这里模拟的就是硬件部分内容。
 
-因此中断的模拟按照我的理解可以分为两个主要部分，一个是中断源的模拟，一个是给虚拟机的VCPU响应中断。
+因此中断的模拟按照我的理解可以分为两个主要部分，一个是**中断源的模拟**，一个是**给虚拟机的VCPU响应中断**。
 
 中断源模拟：
 
@@ -28,15 +28,15 @@
 
 虚拟机响应虚拟中断：
 
-KVM中断虚拟化主要依赖于VT-x技术，VT-x主要提供了两种中断事件机制，分别是中断退出和中断注入。
+KVM中断虚拟化主要依赖于`VT-x`技术，VT-x主要提供了**两种中断事件机制**，分别是**中断退出**和**中断注入**。
 
 中断退出
 
-是指虚拟机发生中断时，主动使得客户机发生VM-exit，这样能够在主机中实现对客户机中断的注入。
+是指虚拟机发生中断时，主动使得客户机发生`VM-exit`，这样能够在主机中实现**对客户机中断的注入**。
 
 中断注入
 
-它是指将中断写入VMCS对应的中断信息位，来实现中断的注入，当中断完成后通过读取中断的返回信息来分析中断是否正确。这个也是这里要详细讲的地方。
+它是指**将中断写入VMCS对应的中断信息位**，来实现中断的注入，当中断完成后通过读取中断的返回信息来分析中断是否正确。这个也是这里要详细讲的地方。
 
 首先中断注入有个一个标志性的函数 kvm_set_irq()，这个是中断注入的最开始。
 
